--- a/app/src/main/res/layout/fragment_rooms.xml
+++ b/app/src/main/res/layout/fragment_rooms.xml
@@ -3,13 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.ui.fragment.MainFragment">
+    tools:context=".presentation.ui.fragment.RoomsFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Main" />
+        android:text="Rooms" />
 
 </FrameLayout>
