--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,12 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue">#0D72FF</color>
+    <color name="blue_button">#0068f6</color>
+    <color name="grey">#FF828796</color>
+    <color name="grade_background">#fff5d0</color>
+    <color name="grade_text">#ffad39</color>
+    <color name="grade">#fff5d0</color>
+    <color name="room_details">#e4f0fe</color>
+    <color name="background">#f6f6f9</color>
 </resources>
