--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="h1">30sp</dimen>
     <dimen name="h2">22sp</dimen>
+    <dimen name="h3">18sp</dimen>
     <dimen name="body1">16sp</dimen>
     <dimen name="body2">14sp</dimen>
 </resources>
