--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -24,6 +24,10 @@
             android:id="@+id/action_roomsFragment_to_bookingFragment2"
             app:destination="@id/bookingFragment2"
             app:popUpTo="@id/roomsFragment"/>
+        <argument
+            android:name="hotelname"
+            app:argType="string"
+            android:defaultValue="1" />
     </fragment>
     <fragment
         android:id="@+id/bookingFragment2"
@@ -31,9 +35,15 @@
         android:label="fragment_booking"
         tools:layout="@layout/fragment_booking" >
         <action
-            android:id="@+id/action_bookingFragment2_to_hotelFragment"
-            app:destination="@id/hotelFragment"
-            app:popUpTo="@id/hotelFragment"
-            app:popUpToInclusive="false"/>
+            android:id="@+id/action_bookingFragment2_to_orderFragment"
+            app:destination="@id/orderFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/orderFragment"
+        android:name="com.tematihonov.hoteltest.presentation.ui.fragment.OrderFragment"
+        android:label="OrderFragment" >
+        <action
+            android:id="@+id/action_orderFragment_to_hotelFragment"
+            app:destination="@id/hotelFragment" />
     </fragment>
 </navigation>
