--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="blue">#0D72FF</color>
     <color name="blue_button">#0068f6</color>
     <color name="grey">#FF828796</color>
+    <color name="carousel_grey">#c7c7c7</color>
     <color name="grade_background">#fff5d0</color>
     <color name="grade_text">#ffad39</color>
     <color name="grade">#fff5d0</color>
