--- a/app/src/main/res/layout/item_room.xml
+++ b/app/src/main/res/layout/item_room.xml
@@ -8,63 +8,112 @@
     android:background="@color/background"
     tools:ignore="ContentDescription" >
 
-    <LinearLayout
-        android:id="@+id/linear1"
-        android:background="@drawable/room_item_rounded_corners"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/carousel"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:orientation="vertical"
-        android:gravity="center_horizontal"
+        android:layout_height="257dp"
+        android:background="@color/white"
+        android:paddingHorizontal="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:background="@color/black"/>
+    </androidx.viewpager2.widget.ViewPager2>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="17dp"
+        android:background="@color/white"
+        app:cardCornerRadius="5dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/carousel"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="17dp"
+            android:orientation="horizontal"
+            android:paddingHorizontal="10dp"
+            android:paddingVertical="5dp">
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/hotel_carousel_cv1"
+                android:layout_width="7dp"
+                android:layout_height="7dp"
+                app:cardCornerRadius="100dp"
+                android:backgroundTint="@color/carousel_grey"/>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/hotel_carousel_cv2"
+                android:layout_width="7dp"
+                android:layout_height="7dp"
+                android:layout_marginHorizontal="7dp"
+                app:cardCornerRadius="100dp"
+                android:backgroundTint="@color/carousel_grey"/>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/hotel_carousel_cv3"
+                android:layout_width="7dp"
+                android:layout_height="7dp"
+                app:cardCornerRadius="100dp"
+                android:backgroundTint="@color/carousel_grey"/>
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <LinearLayout
+        android:id="@+id/linear1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/room_item_rounded_corners"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:padding="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/carousel">
 
         <TextView
             android:id="@+id/room_name"
-            android:paddingVertical="8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingVertical="8dp"
             android:textSize="@dimen/h2"
-            tools:text="Стандартный с видом на бассейн или сад"/>
+            tools:text="Стандартный с видом на бассейн или сад" />
 
         <!-- //TODO about_the_room peculiarities  -->
 
         <LinearLayout
-            android:layout_marginTop="16dp"
             android:layout_width="match_parent"
-            android:layout_height="29dp">
+            android:layout_height="29dp"
+            android:layout_marginTop="16dp">
 
             <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="29dp"
                 android:background="@drawable/rooms_details_rounded_corners"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
                 android:paddingVertical="5dp"
                 android:paddingStart="10dp"
                 android:paddingEnd="8dp"
-                android:layout_width="wrap_content"
-                android:layout_height="29dp"
                 tools:ignore="UselessParent">
 
                 <TextView
-                    android:text="@string/rooms_details"
                     android:id="@+id/hotel_rating_name"
-                    android:textSize="@dimen/body1"
-                    android:textColor="@color/blue"
                     android:layout_width="wrap_content"
-                    android:layout_height="19dp" />
+                    android:layout_height="19dp"
+                    android:text="@string/rooms_details"
+                    android:textColor="@color/blue"
+                    android:textSize="@dimen/body1" />
 
                 <ImageView
-                    android:src="@drawable/icon_arrow"
+                    android:layout_width="wrap_content"
+                    android:layout_height="12dp"
                     android:layout_marginStart="10dp"
                     android:backgroundTint="@color/blue"
-                    android:layout_width="wrap_content"
-                    android:layout_height="12dp"/>
+                    android:src="@drawable/icon_arrow" />
 
             </LinearLayout>
 
@@ -76,33 +125,32 @@
 
             <TextView
                 android:id="@+id/room_price"
-                android:textSize="@dimen/h1"
-                android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="от 134 673 ₽"/>
+                android:textSize="@dimen/h1"
+                android:textStyle="bold"
+                tools:text="от 134 673 ₽" />
 
             <TextView
                 android:id="@+id/room_price_per"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:textColor="@color/grey"
                 android:textSize="@dimen/body1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="за тур с перелётом"/>
+                tools:text="за тур с перелётом" />
 
         </LinearLayout>
 
         <Button
             android:id="@+id/button_choose_room"
-            android:layout_marginVertical="16dp"
-            android:text="@string/rooms_choose_room"
-            android:backgroundTint="@color/blue_button"
             android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginVertical="16dp"
             android:layout_marginTop="12dp"
             android:layout_marginBottom="28dp"
-            android:layout_height="48dp">
-        </Button>
+            android:backgroundTint="@color/blue_button"
+            android:text="@string/rooms_choose_room" />
 
     </LinearLayout>
 
