--- a/app/src/main/res/layout/fragment_hotel.xml
+++ b/app/src/main/res/layout/fragment_hotel.xml
@@ -213,6 +213,16 @@
 
             <!-- //TODO about_the_hotel peculiarities  -->
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/hotel_about_peculiarities"
+                android:orientation="horizontal"
+                android:clipToPadding="true"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:listitem="@layout/item_peculiarity"
+                tools:itemCount="5"/>
+
             <TextView
                 android:id="@+id/hotel_about_the_hotel_description"
                 android:layout_marginVertical="16dp"
